[gd_scene load_steps=24 format=3 uid="uid://cf8x3clrpq4uu"]

[ext_resource type="TileSet" uid="uid://c7nw4oq8xjdee" path="res://Tilesets/MazeTileset.tres" id="2_bmxlf"]
[ext_resource type="Texture2D" uid="uid://cg86qktgecw0r" path="res://Sprites/Tiles/Floor/floor.png" id="3_4kpch"]
[ext_resource type="Script" uid="uid://bjrf50sjb6tdb" path="res://Scripts/player.gd" id="3_jw32o"]
[ext_resource type="Script" uid="uid://6eabod3qwpm4" path="res://Scripts/camera_2d.gd" id="4_50glp"]
[ext_resource type="Texture2D" uid="uid://cijdbkkau8u37" path="res://Sprites/Tiles/Floor/port.png" id="4_grg3l"]
[ext_resource type="Texture2D" uid="uid://bh68mccxl1bmm" path="res://Sprites/Torchlight.png" id="6_v1gob"]
[ext_resource type="Shader" uid="uid://bcdyksagsx6dl" path="res://Shaders/blur.gdshader" id="7_jw32o"]
[ext_resource type="Texture2D" uid="uid://dw7iwy27hwe5b" path="res://Sprites/elec_v_1.png" id="8_50glp"]
[ext_resource type="Texture2D" uid="uid://bt661d2njii8a" path="res://Sprites/Baby_Shark/Idle/f_id_1.png" id="8_bmxlf"]
[ext_resource type="Script" uid="uid://dh2iyhwfc7pjj" path="res://Scripts/maze_generator.gd" id="9_vy5pj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5dk5x"]
texture = ExtResource("3_4kpch")
texture_region_size = Vector2i(218, 218)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0

[sub_resource type="TileSet" id="TileSet_4kpch"]
tile_size = Vector2i(218, 218)
sources/0 = SubResource("TileSetAtlasSource_5dk5x")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vy5pj"]
load_path = "res://.godot/imported/wall_horizontal.png-0c0dc130893b6453051858f59721b574.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f7nx2"]
texture = SubResource("CompressedTexture2D_vy5pj")
margins = Vector2i(0, 71)
texture_region_size = Vector2i(218, 76)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:0/0 = 0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bmxlf"]
load_path = "res://.godot/imported/wall_vertical.png-628afa1a491b06a6fe826b2039be8b2f.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u01jw"]
texture = SubResource("CompressedTexture2D_bmxlf")
margins = Vector2i(85, 0)
texture_region_size = Vector2i(49, 218)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_grg3l"]
tile_size = Vector2i(218, 218)
sources/2 = SubResource("TileSetAtlasSource_u01jw")
sources/1 = SubResource("TileSetAtlasSource_f7nx2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vy5pj"]
texture = ExtResource("3_4kpch")
texture_region_size = Vector2i(218, 218)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wb0ot"]
texture = ExtResource("4_grg3l")
texture_region_size = Vector2i(218, 218)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0

[sub_resource type="TileSet" id="TileSet_frkhe"]
tile_size = Vector2i(218, 218)
sources/1 = SubResource("TileSetAtlasSource_wb0ot")
sources/0 = SubResource("TileSetAtlasSource_vy5pj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vy5pj"]
size = Vector2(136, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]
size = Vector2(156, 320)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v1gob"]
shader = ExtResource("7_jw32o")
shader_parameter/blur_amount = 1.0

[node name="Main" type="Node2D"]

[node name="MazeGenerator" type="Node2D" parent="."]
script = ExtResource("9_vy5pj")
maze_tiles = ExtResource("2_bmxlf")

[node name="FloorLayer" type="TileMapLayer" parent="MazeGenerator"]
tile_set = SubResource("TileSet_4kpch")

[node name="WallLayer" type="TileMapLayer" parent="MazeGenerator"]
tile_set = SubResource("TileSet_grg3l")

[node name="PortLayer" type="TileMapLayer" parent="MazeGenerator"]
tile_set = SubResource("TileSet_frkhe")

[node name="RechargePort" type="Area2D" parent="."]
position = Vector2(690, -118)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RechargePort"]
shape = SubResource("RectangleShape2D_vy5pj")

[node name="Sprite2D" type="Sprite2D" parent="RechargePort"]
texture = ExtResource("8_50glp")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("3_jw32o")

[node name="Camera2D" type="Camera2D" parent="Player"]
script = ExtResource("4_50glp")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("8_bmxlf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_3dxm6")

[node name="FlashLight" type="PointLight2D" parent="Player"]
position = Vector2(-20, 392)
rotation = 1.5708
texture = ExtResource("6_v1gob")

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="BlurOverlay" type="ColorRect" parent="Player/CanvasLayer"]
material = SubResource("ShaderMaterial_v1gob")
anchors_preset = -1
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -722.0
offset_right = 35.0
offset_bottom = -722.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)

[node name="Control" type="Control" parent="Player/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SanityLabel" type="Label" parent="Player/CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="FlashLightFlicker" type="Timer" parent="Player"]
wait_time = 0.1

[connection signal="body_entered" from="RechargePort" to="Player" method="_on_recharge_port_body_entered"]
[connection signal="body_exited" from="RechargePort" to="Player" method="_on_recharge_port_body_exited"]
